# stackql-deploy-rust

./: .gitignore  Cargo.toml  README.md  contributors.csv  get-contributors.iql  get-contributors.sh
.github/workflows/: build.yml  deploy-action.yml  deploy-website.yml  star-check.yml  test-demo.yml
ci-scripts/: build-local.sh  build.sh  format.sh  lint.sh  test.sh
src/: app.rs  error.rs  globals.rs  main.rs
src/commands/: build.rs  info.rs  init.rs  mod.rs  plan.rs  shell.rs  start_server.rs  stop_server.rs  teardown.rs  test.rs  upgrade.rs
src/utils/: binary.rs  connection.rs  display.rs  download.rs  mod.rs  platform.rs  query.rs  server.rs  stackql.rs
