[package]
name = "stackql-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
zip = "0.6"
unicode-width = "0.1.10"
postgres = "0.19"
rustyline = "10.0"
tera = "1.19.0"
once_cell = "1.17.0"
